# trade-ngin

./: .clang-format  .clang-tidy  .clang-tidy.precommit  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  02-09-2025_positions.csv  08-10-2025_positions_asof_09-10-2025.csv  09-10-2025_positions.csv  10-10-2025_positions_asof_11-10-2025.csv  11-10-2025_positions.csv  16-10-2025_positions.csv  16-10-2025_positions_asof_16-10-2025.csv  16-10-2025_positions_asof_17-10-2025.csv  17-10-2025_positions.csv  17-10-2025_positions_asof_18-10-2025.csv  18-10-2025_positions.csv  18-10-2025_positions_asof_19-10-2025.csv  19-10-2025_positions.csv  19-10-2025_positions_asof_20-10-2025.csv  20-10-2025_positions.csv  23-10-2025_positions_asof_24-10-2025.csv  24-10-2025_positions.csv  24-10-2025_positions_asof_25-10-2025.csv  25-10-2025_positions.csv  25-10-2025_positions_asof_26-10-2025.csv  26-10-2025_positions.csv  26-10-2025_positions_asof_27-10-2025.csv  27-10-2025_positions.csv  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_README.md  CLAUDE1.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COMPLETE_REFACTORING_PLAN.md  COMPONENT_TESTING.md  CTestTestfile.cmake  (+82 more)
apps/: CMakeLists.txt  test_database_extensions.cpp
apps/backtest/: CMakeLists.txt  bt_bpgv_rotation.cpp  bt_copper_gold_ip.cpp  bt_equity_mean_reversion.cpp  bt_equity_validation.cpp  bt_futures_mean_reversion.cpp  bt_portfolio.cpp  bt_portfolio_conservative.cpp  bt_regime_switching_fx_strategy.cpp  bt_transaction_cost_report.cpp  bt_trend.cpp  run_backtest.sh
apps/macro/: CMakeLists.txt  macro_dfm_runner.cpp  macro_msdfm_runner.cpp  macro_regime_pipeline_runner.cpp  market_regime_pipeline_runner.cpp
apps/regime_detection/: macro_msdfm_runner.cpp  market_regime_pipeline_runner.cpp
apps/strategies/: CMakeLists.txt  analysis_demo_strategy.cpp  live_equity_mean_reversion.cpp  live_portfolio.cpp  live_portfolio_conservative.cpp  live_trend.cpp
python/: CMakeLists.txt  module.cpp
python/bindings/: api_bindings.cpp  bindings.hpp  database_bindings.cpp  instrument_registry_bindings.cpp  result_caster.hpp  strategy_bindings.cpp  type_bindings.cpp  type_bindings.hpp
tests/: CMakeLists.minimal.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark_live.cpp  cmake_install.cmake  debug_verify_changes.cpp  minimal_thread_test.cpp  race_conditions.cpp  test_connection.cpp  test_ibkr_connection.cpp  test_integration.cpp  test_portfolio.cpp  test_strategy.cpp  valgrind_benchmark.cpp
tests/analysis/: README.md  analysis_standalone_test.cpp  compile_test.sh
tests/backtesting/: test_backtest_coordinator.cpp  test_backtest_csv_exporter.cpp  test_backtest_data_loader.cpp  test_backtest_execution_manager.cpp  test_backtest_metrics_calculator.cpp  test_backtest_pnl_manager.cpp  test_backtest_portfolio_constraints.cpp  test_backtest_price_manager.cpp  test_engine.cpp  test_slippage_model.cpp  test_transaction_cost_analysis.cpp
tests/bt_trend_minimal/: CMakeLists.txt  bt_trend_engine_stub.hpp  bt_trend_minimal_test.cpp  run_perf.sh  run_tsan.sh  run_valgrind.sh
tests/core/: test_base.hpp  test_config_base.cpp  test_config_base_extended.cpp  test_config_loader.cpp  test_config_manager.cpp  test_config_manager_extended.cpp  test_config_version.cpp  test_config_version_extended.cpp  test_logger.cpp  test_result.cpp  test_run_id_generator.cpp  test_state_manager.cpp  test_state_manager_extended.cpp  test_time_utils.cpp
tests/data/: test_conversion_utils.cpp  test_credential_store.cpp  test_credential_store_extended.cpp  test_database_interface.cpp  test_database_pooling.cpp  test_database_pooling_extended.cpp  test_db_utils.cpp  test_db_utils.hpp  test_market_data_bus.cpp  test_postgres_database.cpp
tests/execution/: test_execution_engine.cpp  test_execution_engine_extended.cpp
tests/instruments/: test_equity.cpp  test_futures.cpp  test_instrument_registry.cpp  test_option.cpp
tests/live/: test_csv_exporter.cpp  test_execution_manager.cpp  test_live_data_loader.cpp  test_live_historical_metrics.cpp  test_live_metrics_calculator.cpp  test_live_pnl_manager.cpp  test_live_price_manager.cpp  test_margin_manager.cpp
tests/market_data_minimal/: CMakeLists.txt  market_data_bus_stub.hpp  market_data_manager_stub.cpp  market_data_minimal_test.cpp  run_perf.sh  run_tsan.sh  run_valgrind.sh
tests/minimal/: CMakeLists.txt
tests/misc tests/: CTestTestfile.cmake  README.md  debug_log.md  fake_ibkr_server  inkr.md  mock_trading  test_ibkr_paper_trader  test_vol_regime
tests/optimization/: test_dynamic_optimizer.cpp  test_dynamic_optimizer_extended.cpp
tests/order/: test_order_manager.cpp  test_utils.cpp  test_utils.hpp
tests/portfolio/: mock_strategy.hpp  test_portfolio_manager.cpp  test_portfolio_manager_extended.cpp  test_portfolio_manager_internals.cpp
tests/portfolio_minimal/: CMakeLists.txt  Dockerfile  portfolio_manager_stub.cpp  portfolio_manager_stub.hpp  portfolio_minimal_test.cpp  run_perf.sh  run_tsan.sh  run_valgrind.sh
tests/regime_engine/: test_growth_inflation_quadrant.cpp
tests/risk/: test_risk_manager.cpp  test_risk_manager_extended.cpp
tests/signal_minimal/: CMakeLists.txt  base_strategy_stub.hpp  run_perf.sh  run_tsan.sh  run_valgrind.sh  signal_engine_stub.cpp  signal_minimal_test.cpp
tests/statistics/: test_adf.cpp  test_bsts_regime_detector.cpp  test_convergence_monitoring.cpp  test_critical_values.cpp  test_dcc_garch.cpp  test_dynamic_factor_model.cpp  test_egarch.cpp  test_engle_granger.cpp  test_extended_kalman_filter.cpp  test_garch.cpp  test_gjr_garch.cpp  test_gmm.cpp  test_hmm.cpp  test_hurst_exponent.cpp  test_johansen.cpp  test_kalman_filter.cpp  test_kpss.cpp  test_lasso_regression.cpp  test_macro_data_loader.cpp  test_macro_regime_pipeline.cpp  test_market_data_loader.cpp  test_market_regime_pipeline.cpp  test_markov_switching.cpp  test_missing_data_handler.cpp  test_ms_dfm.cpp  test_msar.cpp  test_normalizer.cpp  test_pca.cpp  (+12 more)
trade_ngin/: CMakeCache.txt  CMakeLists (1).txt  CMakeLists.txt  Makefile  cmake_install.cmake  mock_trading_main.cpp  test_trend_strategy.cpp
(+609 files in other folders)
